--- a/website/templates/user.html
+++ b/website/templates/user.html
@@ -4,6 +4,7 @@
 
 <div class="page-header">
     <h4>{{heading}}</h4>
+    <p> Hello World</p>
 </div>
 
 <!-- Form rendering is simple and easy if using WTForms -->
