--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./static/img/Picture1.png" alt="QUT EMS" width="132">
+                    <img src="website\templates\Picture1.png" alt="QUT EMS" width="132">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
