--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./static/img/esport1.jpg" class="d-block w-100" alt="...">
+                        <img src="static/img/esport1.jpg" class="d-block w-100" alt="...">
                         <div class="badge carousel-caption carousel-caption-md d-none d-lg-block">
                             <div class="row">
                                 <div class="col-lg-1"></div>
@@ -49,15 +49,15 @@
                             </div>
                         </div>
                         <div class="badge carousel-caption d-sm-block d-md-none">
-                            <div class="row"">
+                            <div class="row">
                   <h2>QUT eSports Competition 2023</h2>
                   <p>QUT eSports Society</p>
-                  <a href=" eventDetails.html" class="stretched-link"></a>
+                  <a href="eventDetails.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./static/img/QUT Staff Event1.jpg" class="d-block w-100" alt="...">
+                        <img src="static/img/QUT Staff Event1.jpg" class="d-block w-100" alt="...">
                         <div class="badge carousel-caption carousel-caption-md d-none d-lg-block">
                             <div class="row">
                                 <div class="col-lg-1"></div>
@@ -95,14 +95,14 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./static/img/TedxQUT1.png" class="d-block w-100" alt="...">
+                        <img src="static/img/TedxQUT1.png" class="d-block w-100" alt="...">
                         <div class="badge carousel-caption carousel-caption-md d-md-block">
                             <div class="row">
                                 <div class="col-1"></div>
                                 <div class="col-7"">
                     <h2>TEDxQUT 2023</h2>
                     <p>Industry & Networking</p>
-                    <a href=" eventDetails.html" class="stretched-link"></a>
+                    <a href="eventDetails.html" class="stretched-link"></a>
                                 </div>
                                 <div class="col-3">
                                     <h4>10th Oct<br>10:00 am</h4>
@@ -183,7 +183,7 @@
         <div class="card card-lg d-lg-block mb-3">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <img src="./static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
@@ -211,7 +211,7 @@
         <div class="card d-block d-lg-none mb-3">
             <div class="row g-0">
                 <div class="col-md-5">
-                    <img src="./static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
@@ -237,7 +237,7 @@
         <div class="card card-lg mb-3 d-none d-lg-block">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <img src="./static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
@@ -260,7 +260,7 @@
         <div class="card d-block d-lg-none mb-3">
             <div class="row g-0">
                 <div class="col-md-5">
-                    <img src="./static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
@@ -286,7 +286,7 @@
         <div class="card card-lg mb-3 d-none d-lg-block">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <img src="./static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
@@ -309,7 +309,7 @@
         <div class="card d-block d-lg-none mb-3">
             <div class="row g-0">
                 <div class="col-md-5">
-                    <img src="./static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
+                    <img src="static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
