--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"">
                 <ul class=" navbar-nav nav-underline me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color:white">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{{url_for('main.index')}}" style="color:white">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Create Event</a>
+                        <a class="nav-link" href="{{url_for('event.create')}}">Create Event</a>
                     </li>
                     <li class="nav-item">
                         <a class=" nav-link" href="bookingHistory.html">Booking History</a>
