--- a/website/templates/eventsBase.html
+++ b/website/templates/eventsBase.html
@@ -26,10 +26,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"">
                 <ul class=" navbar-nav nav-underline me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#" style="color:white">Home</a>
+                        <a class="nav-link" aria-current="page" href="{{url_for('main.index')}}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="eventCreateEdit.html">Create Event</a>
+                        <a class="nav-link active" href="#" style="color:white">Create Event</a>
                     </li>
                     <li class="nav-item"">
                     <a class=" nav-link" href="bookingHistory.html">Booking History</a>
