--- a/website/static/style/events-create.css
+++ b/website/static/style/events-create.css
@@ -1,3 +1,20 @@
 body {
     background: url('../img/campus-2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+.form-field {
+    margin: 2vh 0vw 2vh 0vw;
+}
+
+.form-container {
+    width: 40vw;
+    background-color: #00407a;
+    color: white;
+    padding: 2% 1% 2% 1%;
+    margin: 3% 0% 3% 0%;
+    border-radius: 15px;
 }
