--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -15,7 +15,7 @@
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="{{url_for('main.index')}}">
                     <img src="./static/img/Picture1.png" alt="QUT EMS" width="132">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
