Changes to filter names in Index

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -144,24 +144,19 @@
         <div class="d-grid gap-2">
             <div class="btn-group button-primary btn-group-lg" role="group" aria-label="Basic example">
                 <a href="#Events" class="btn col-md-3"
-                    style="padding-block: 50px; background-color: rgb(0, 255, 255, 0.8)">Culture</a>
+                    style="padding-block: 50px; background-color: rgb(0, 255, 255, 0.8)">Faculty of Business</a>
                 <a href="#Events" class="btn btn-primary col-md-3"
-                    style="padding-block: 50px; background-color:#00407a; outline: none;">Industry
-                    &
-                    Networking</a>
+                    style="padding-block: 50px; background-color:#00407a; outline: none;">Faculty of Creative Industries</a>
                 <a href="#Events" class="btn col-md-3"
-                    style="padding-block: 50px; background-color: rgb(0, 255, 255, 0.8)">Welcome
-                    Week</a>
+                    style="padding-block: 50px; background-color: rgb(0, 255, 255, 0.8)">Faculty of Engineering</a>
             </div>
         </div>
         <div class="d-grid gap-2">
             <div class="btn-group btn-group-lg" role="group" aria-label="Basic example">
                 <a href="#Events" class="btn btn-primary col-md-3"
-                    style="padding-block: 50px; background-color:#00407a; outline: none;">Faculty
-                    Socials</a>
+                    style="padding-block: 50px; background-color:#00407a; outline: none;">Faculty of Information Technology</a>
                 <a href=" #Events" class="btn col-md-3"
-                    style="padding-block: 50px; background-color:rgb(0, 255, 255, 0.8)">Student
-                    Society</a>
+                    style="padding-block: 50px; background-color:rgb(0, 255, 255, 0.8)">Faculty of Sciences</a>
                 <button type=" button" class="btn btn-primary dropdown-toggle col-md-3" data-bs-toggle="dropdown"
                     aria-expanded="false" style="padding-block: 50px; background-color:#00407a">
                     Filter by Faculty
