flitering the dropdown menu

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -159,14 +159,14 @@
                     style="padding-block: 50px; background-color:rgb(0, 255, 255, 0.8)">Faculty of Sciences</a>
                 <button type=" button" class="btn btn-primary dropdown-toggle col-md-3" data-bs-toggle="dropdown"
                     aria-expanded="false" style="padding-block: 50px; background-color:#00407a">
-                    Filter by Faculty
+                    Filter by Student Clubs
                 </button>
                 <ul class=" dropdown-menu">
-                    <li><a class="dropdown-item" href="#Events">Business</a></li>
-                    <li><a class="dropdown-item" href="#Events">Creative Industries</a></li>
-                    <li><a class="dropdown-item" href="#Events">Engineering</a></li>
-                    <li><a class="dropdown-item" href="#Events">Information Technology</a></li>
-                    <li><a class="dropdown-item" href="#Events">Sciences</a></li>
+                    <li><a class="dropdown-item" href="#Events">QUT Bookclub</a></li>
+                    <li><a class="dropdown-item" href="#Events">Code Network</a></li>
+                    <li><a class="dropdown-item" href="#Events">Debating Society</a></li>
+                    <li><a class="dropdown-item" href="#Events">QUT Cheer and Dance</a></li>
+                    <li><a class="dropdown-item" href="#Events">QUT Cliffhangers</a></li>
                 </ul>
             </div>
         </div>
