--- a/website/templates/user.html
+++ b/website/templates/user.html
@@ -1,5 +1,5 @@
 {% include "base.html" %}
-{% import "bootstrap/wtf.html" as wtf %}
+{% from 'bootstrap5/form.html' import render_form %}
 {% block body %}
 
 <div class="page-header">
@@ -11,13 +11,13 @@
 <!-- If you want more granular control, declare the form manually: -->
 <!-- <form action="/route" method="post"> -->
 <div class="col-md-6">
-    {{wtf.render_form(form)}}
+    {{render_form(form)}}
 </div>
 
 <!-- When you have login form, then show the user a link to register -->
 {% if heading|lower =='login' %}
 <div class="col-md-4">
-    <p>New user? <a href="{{ url_for('register') }}">Click here to register</a>.</p>
+    <p>New user? <a href="{{ url_for('auth.register') }}">Click here to register</a>.</p>
 </div>
 {% endif %}
 
