made log in and register page work

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./static/style/index.css">
 </head>
 
-<body>
+<body>    
     <!-- Header -->
     <header>
 
@@ -34,12 +34,23 @@
                     <li class="nav-item">
                         <a class=" nav-link" href="bookingHistory.html">Booking History</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" href="#">Register</a>
-                    </li>
+
+                    {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" href="#">My Account</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" href="{{url_for('auth.login')}}">Log In</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item nav-link" href="{{url_for('auth.register')}}">Register</a>
+                        </li>
+                    {% endif %}
+
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -53,6 +64,22 @@
         {% endblock %}
 
     </header>
+
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <div class="container">
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <ul class="flashes">
+                        {% for category, message in messages %}
+                            <li class="{{ category }}">{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            </div>
+        {% endif %}
+    {% endwith %}
 
     {% block content %}
     {% endblock %}
