--- a/website/static/style/index.css
+++ b/website/static/style/index.css
@@ -93,3 +93,38 @@ h1 {
 form{
     background: url('static/img/campus-2.jpg');
   }
+
+main#auth {
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    min-height: 90vh;
+    background: url('../img/campus-2.jpg');
+}
+
+.auth-container {
+    background-color: rgb(255, 255, 255);
+    border-radius: 3%;
+    padding: 2%;
+}
+
+
+.alert {
+    margin-top: 2%;
+}
+
+.flashes {
+    margin: 0;
+}
+
+.alert {    
+    position: absolute;
+    top: 10%;
+    left: 30%;
+    right: 30%;
+    z-index: 999;
+}
+
+ul {
+    list-style: none;
+}
