--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -50,9 +50,9 @@
                         </div>
                         <div class="badge carousel-caption d-sm-block d-md-none">
                             <div class="row">
-                  <h2>QUT eSports Competition 2023</h2>
-                  <p>QUT eSports Society</p>
-                  <a href="eventDetails.html" class="stretched-link"></a>
+                                <h2>QUT eSports Competition 2023</h2>
+                                <p>QUT eSports Society</p>
+                                <a href="eventDetails.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                 <div class="col-7"">
                     <h2>TEDxQUT 2023</h2>
                     <p>Industry & Networking</p>
-                    <a href="eventDetails.html" class="stretched-link"></a>
+                    <a href=" eventDetails.html" class="stretched-link"></a>
                                 </div>
                                 <div class="col-3">
                                     <h4>10th Oct<br>10:00 am</h4>
@@ -175,159 +175,33 @@
         <div class="row mb-3" id="Events">
             <h1>Upcoming Events</h1>
         </div>
+        {% for event in events %}
         <div class="card card-lg d-lg-block mb-3">
             <div class="row g-0">
                 <div class="col-md-3">
-                    <img src="static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
+                    <img src="{{ event.image }}" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-7">
                     <div class="card-body">
                         <div class="row mb-3">
-                            <h5 class="card-title"><span class="badge">Open</span>QUT eSports Competition 2023</h5>
-                            <h6 class="text-body-secondary">QUT
-                                eSports Society</h6>
+                            <h5 class="card-title"><span class="badge">Open</span>{{event.name}}</h5>
+                            <h6 class="text-body-secondary">{{event.organiser}}</h6>
                         </div>
                         <div class="row">
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-                                feugiat
-                                arcu, id
-                                ultricies metus. Suspendisse consequat vehicula malesuada.</p>
+                            <p class="card-text">{{event.description}}</p>
                         </div>
                         <a href="eventDetails.html" class="stretched-link"></a>
                     </div>
                 </div>
                 <div class="col-md-2 my-auto">
                     <div class="card-body date-time">
-                        <h4>14<br>September<br>6:00 pm</h4>
+                        <!-- <h4>14<br>September<br>6:00 pm</h4> -->
+                        <h4>{{event.eventdatetime}}</h4>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="card d-block d-lg-none mb-3">
-            <div class="row g-0">
-                <div class="col-md-5">
-                    <img src="static/img/esport.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <div class="row mb-3">
-                            <h5 class="card-title"><span class="badge">Open</span>QUT eSports Competition 2023</h5>
-                            <h6 class="text-body-secondary">QUT
-                                eSports Society</h6>
-                        </div>
-                        <div class="row mb-2">
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-                                feugiat
-                                arcu, id
-                                ultricies metus. Suspendisse consequat vehicula malesuada.</p>
-                        </div>
-                        <div class="row">
-                            <h4>14 September 6:00 pm</h4>
-                        </div>
-                        <a href="eventDetails.html" class="stretched-link"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card card-lg mb-3 d-none d-lg-block">
-            <div class="row g-0">
-                <div class="col-md-3">
-                    <img src="static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <h5 class="card-title"><span class="badge" ">Open</span>Information Systems Faculty Mixer</h5>
-              <h6 class=" text-body-secondary">Faculty of Informations Systems</h6>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-                                    feugiat arcu,
-                                    id
-                                    ultricies metus. Suspendisse consequat vehicula malesuada.</p>
-                    </div>
-                    <a href="eventDetails.html" class="stretched-link"></a>
-                </div>
-                <div class="col-md-2 my-auto">
-                    <div class="card-body date-time">
-                        <h4>25<br>November<br>8:00 pm</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card d-block d-lg-none mb-3">
-            <div class="row g-0">
-                <div class="col-md-5">
-                    <img src="static/img/QUT Staff Event.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <div class="row mb-3">
-                            <h5 class="card-title"><span class="badge" ">Open</span>Information Systems Faculty Mixer
-                </h5>
-                <h6 class=" text-body-secondary">QUT
-                                    Faculty of Informations Systems</h6>
-                        </div>
-                        <div class="row mb-2">
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-                                feugiat arcu, id
-                                ultricies metus. Suspendisse consequat vehicula malesuada.</p>
-                        </div>
-                        <div class="row">
-                            <h4>25 November 8:00 pm</h4>
-                        </div>
-                        <a href="eventDetails.html" class="stretched-link"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card card-lg mb-3 d-none d-lg-block">
-            <div class="row g-0">
-                <div class="col-md-3">
-                    <img src="static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <h5 class="card-title"><span class="badge">Sold
-                                Out</span>TEDxQUT 2023</h5>
-                        <h6 class="text-body-secondary">Industry & Networking</h6>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget feugiat
-                            arcu, id
-                            ultricies metus. Suspendisse consequat vehicula malesuada.</p>
-                    </div>
-                    <a href="eventDetails.html" class="stretched-link"></a>
-                </div>
-                <div class="col-md-2 my-auto">
-                    <div class="card-body date-time">
-                        <h4>10<br>October<br>10:00 am</h4>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="card d-block d-lg-none mb-3">
-            <div class="row g-0">
-                <div class="col-md-5">
-                    <img src="static/img/TedxQUT.png" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-7">
-                    <div class="card-body">
-                        <div class="row mb-3">
-                            <h5 class="card-title"><span class="badge sold-out">Sold
-                                    Out</span>TEDxQUT 2023</h5>
-                            <h6 class=" text-body-secondary">QUT
-                                Industry & Networking</h6>
-                        </div>
-                        <div class="row mb-2">
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget
-                                feugiat arcu, id
-                                ultricies metus. Suspendisse consequat vehicula malesuada.</p>
-                        </div>
-                        <div class="row">
-                            <h4>10 October 10:00 am</h4>
-                        </div>
-                        <a href="eventDetails.html" class="stretched-link"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        {% endfor %}
     </div>
 </main>
 {% endblock %}>
