--- a/website/templates/auth/register.html
+++ b/website/templates/auth/register.html
@@ -6,23 +6,23 @@
 {% block content %}
 
 {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}
-        <div class="container">
-            <div class="alert alert-warning">
-                <ul class="flashes">
-                    {% for category, message in messages %}
-                        <li class="{{ category }}">{{ message }}</li>
-                    {% endfor %}
-                </ul>
-            </div>
-        </div>
-    {% endif %}
+{% if messages %}
+<div class="container">
+    <div class="alert alert-warning">
+        <ul class="flashes">
+            {% for category, message in messages %}
+            <li class="{{ category }}">{{ message }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endif %}
 {% endwith %}
 
 <main id="auth">
     <div class="auth-container">
         <h2>Register</h2>
-    
+
         <form method="post">
             {{form.hidden_tag()}}
 
@@ -31,6 +31,12 @@
 
             <label for="email_id" class="form-label">Email</label>
             {{form.email_id(class="form-control")}}
+
+            <label for="email_id" class="form-label">Address</label>
+            {{form.address(class="form-control")}}
+
+            <label for="email_id" class="form-label">Mobile Number</label>
+            {{form.contactNumber(class="form-control")}}
 
             <label for="password" class="form-label">Password</label>
             {{form.password(class="form-control")}}
