--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,17 +6,18 @@
     <title>IAB207 Assignment 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/style/index.css">
+    <link rel="stylesheet" href="../static/style/index.css">
+    <!-- <link rel="stylesheet" href="{{url_for('static', filename='style/index.css')}}"> -->
 </head>
 
-<body>    
+<body>
     <!-- Header -->
     <header>
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{url_for('main.index')}}">
-                    <img src="./static/img/Picture1.png" alt="QUT EMS" width="132">
+                    <img src="../static/img/Picture1.png" alt="QUT EMS" width="132">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -33,23 +34,20 @@
                         <a class="nav-link" href="{{url_for('event.create')}}">Create Event</a>
                     </li>
                     <li class="nav-item">
-                        <a class=" nav-link" href="#">Booking History</a>
+                        <a class=" nav-link" href="{{url_for('booking.bookings')}}">Booking History</a>
                     </li>
 
                     {% if current_user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="#">My Account</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
+                    </li>
                     {% else %}
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="{{url_for('auth.login')}}">Log In</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-item nav-link" href="{{url_for('auth.register')}}">Register</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{{url_for('auth.login')}}">Log In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-item nav-link" href="{{url_for('auth.register')}}">Register</a>
+                    </li>
                     {% endif %}
 
                     </ul>
@@ -67,19 +65,19 @@
     </header>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <div class="container">
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <ul class="flashes">
-                        {% for category, message in messages %}
-                            <li class="{{ category }}">{{ message }}</li>
-                        {% endfor %}
-                    </ul>
+    {% if messages %}
+    <div class="container">
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <ul class="flashes">
+                {% for category, message in messages %}
+                <li class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+            </ul>
 
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            </div>
-        {% endif %}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+    {% endif %}
     {% endwith %}
 
     {% block content %}
