--- a/website/templates/events/show.html
+++ b/website/templates/events/show.html
@@ -8,82 +8,104 @@
 <main id="show">
     {% block content %}
 
-<div class="container mt-5">
-    <h3>{{ event.name }}</h3><span class="badge text-bg-success mb-3">Event Active</span>
-    <div class="row">
-        <div class="col-lg-8">
-            <img style="width: 100%; height: 50%; border-radius: 10px;" src="{{ event.image }}">
-            <h5 class="mt-3">{{event.eventdatetime}}</h5>
-            <h5>Description:</h5>
-            <p>{{event.description}}</p>
-            <!-- Booking modal -->
+    <div class="container mt-5">
+        <h3>{{ event.name }}</h3>
+        <div class="row">
+            <div class="col-lg-2">
+                <button type="button" class="btn btn-primary">
+                    <a href="{{ url_for('event.delete', id=event.id) }}" class="stretched-link"></a>
+                    Delete Event
+                </button>
+            </div>
+            <div class="col-lg-2">
+                <button type="button" class="btn btn-primary">
+                    <a href="{{ url_for('event.update', id=event.id) }}" class="stretched-link"></a>
+                    Edit Event
+                </button>
+            </div>
+        </div>
+        <span class="badge text-bg-success mb-3">Event Active</span>
+        <div class="row">
+            <div class="col-lg-8">
+                <img style="width: 100%; height: 50%; border-radius: 10px;" src="{{ event.image }}">
+                <h5 class="mt-3">{{event.eventdatetime}}</h5>
+                <h5>Description:</h5>
+                <p>{{event.description}}</p>
+                <!-- Booking modal -->
 
-            <!-- Button -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bookingModal">
-                Find Tickets
-            </button>
+                <!-- Button -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#bookingModal">
+                    Find Tickets
+                </button>
 
-            <!-- The modal -->
-            <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                            <button type="button" class="btn-close float-end" data-bs-dismiss="modal"
-                                aria-label="Close"></button>
-                            <h3>Find Tickets</h3>
-                            <h5>1. Confirm Event Details</h5>
-                            <p>{{event.name}} <br>
-                                {{event.organiser}} <br>
-                                {{event.eventdatetime}} <br>
-                                {{event.venue}}
-                            </p>
+                <!-- The modal -->
+                <div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <button type="button" class="btn-close float-end" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                                <h3>Find Tickets</h3>
+                                <h5>1. Confirm Event Details</h5>
+                                <p>{{event.name}} <br>
+                                    {{event.organiser}} <br>
+                                    {{event.eventdatetime}} <br>
+                                    {{event.venue}}
+                                </p>
 
-                            <h5>2. Select Tickets</h5>
-                            ``
-                            <p class="text-body-secondary">Maximum 10 tickets per booking.</p>
-                            <a href="bookingHistory.html" class="btn button-primary" tabindex="-1" role="button">Submit
-                                Booking</a>
-                            <p class="text-body-secondary data-bs-toggle=" modal">By confirming your
-                                booking
-                                you
-                                agree to the event
-                                Terms & Conditions.</p>
+                                <h5>2. Select Tickets</h5>
+                                {{render_form(bookingForm,"/events/{0}/booking".format(event.id))}}
+                                <p class="text-body-secondary">Maximum 10 tickets per booking.</p>
+                                <a href="bookingHistory.html" class="btn button-primary" tabindex="-1"
+                                    role="button">Submit
+                                    Booking</a>
+                                <p class="text-body-secondary data-bs-toggle=" modal">By confirming your
+                                    booking
+                                    you
+                                    agree to the event
+                                    Terms & Conditions.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
-        </div>
-        <div class="col-lg-4">
-            <div class="comments-section">
-                <h5 class="pt-3">Comments:</h5>
 
             </div>
+            <div class="col-lg-4">
+                <div class="comments-section">
+                    <h5 class="pt-3">Comments:</h5>
+                    {% for comment in event.comments %}
+                    <div class="col-md-12">
+                        <b>{{ comment.user.name }} <span class="ml-2 text-muted">January 2024</span></b>
+                        <p>{{ comment.text }}</p>
+                    </div>
+                    {% endfor %}
+                </div>
 
-            <!-- Comment modal -->
+                <!-- Comment modal -->
 
-            <!-- Button -->
-            <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#commentModal">
-                Post a Comment
-            </button>
+                <!-- Button -->
+                <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#commentModal">
+                    Post a Comment
+                </button>
 
-            <!-- The modal -->
-            <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="commentModalLabel">Write Your Comment</h1>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <!-- The modal -->
+                <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="commentModalLabel">Write Your Comment</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            {{render_form(commentForm,"/events/{0}/comment".format(event.id))}}
                         </div>
-                        {{ render_form(commentForm)}}
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-{% endblock %}
+    {% endblock %}
 </main>
