--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -6,8 +6,15 @@
     <title>IAB207 Assignment 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/style/index.css">
-    <!-- <link rel="stylesheet" href="{{url_for('static', filename='style/index.css')}}"> -->
+    <link rel="stylesheet" href="/static/style/index.css">
+    <link rel="stylesheet" href="/static/style/events-create.css">
+
+    <!-- <link rel="stylesheet" href="{{url_for('static', filename='style/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='style/events-create.css')}}"> -->
+
+
+    <title>QUT EMS</title>
+    <link rel="icon" type="image/x-icon" href="/static/img/qut-logo-og-1200.jpg">
 </head>
 
 <body>
@@ -17,7 +24,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="{{url_for('main.index')}}">
-                    <img src="../static/img/Picture1.png" alt="QUT EMS" width="132">
+                    <img src="/static/img/Picture1.png" alt="QUT EMS" width="132">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -27,16 +34,15 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent"">
                 <ul class=" navbar-nav nav-underline me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{url_for('main.index')}}"
-                            style="color:white">Home</a>
+                        <a class="nav-link" aria-current="page" href="{{url_for('main.index')}}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('event.create')}}">Create Event</a>
+                        <a class="nav-link" href="{{url_for('event.create')}}" style="color:white">Create
+                            Event</a>
                     </li>
-                    <li class="nav-item">
-                        <a class=" nav-link" href="{{url_for('booking.bookings')}}">Booking History</a>
+                    <li class="nav-item"">
+                    <a class=" nav-link" href="{{url_for('booking.bookings')}}">Booking History</a>
                     </li>
-
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-item nav-link" href="{{url_for('auth.logout')}}">Log Out</a>
@@ -49,7 +55,6 @@
                         <a class="nav-item nav-link" href="{{url_for('auth.register')}}">Register</a>
                     </li>
                     {% endif %}
-
                     </ul>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -84,7 +89,7 @@
     {% endblock %}
 
     <footer class="footer">
-        <span class="badge">Copyright name, name, name, name 2023</span>
+        <span class="badge">Copyright James Martin, Subiksha Thiyagarajan, Zoe Grambau , Linh Nguyen 2023</span>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
