--- a/website/templates/events/create.html
+++ b/website/templates/events/create.html
@@ -1,4 +1,4 @@
-{% extends 'eventsBase.html' %}
+{% extends 'base.html' %}
 
 {% from 'bootstrap5/form.html' import render_form %}
 
@@ -26,7 +26,8 @@
         <form method="POST" enctype="multipart/form-data">
             <div class="form-container">
                 {{form.hidden_tag()}}
-                <h1>Create Event</h1>
+                <h1>{{heading}}</h1>
+                <h6>{{subheading}}</h6>
                 <label for="name" class="form-label">Name</label>
                 {{ form.name(class = "form-control form-field") }}
 
